# ping-sample

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/Docker/: action.yaml
.github/workflows/: action.yaml  build-test.yml  check-format.yml  main.yaml
sample/: CMakeLists.txt  Kconfig  README.md  prj.conf
sample/include/: main.h  queue.h  sidewalk_callbacks.h  sidewalk_common.h  sidewalk_workitems.h
sample/src/: main.c  queue.c  sidewalk_callbacks.c  sidewalk_globals.c  sidewalk_workitems.c
